--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ebd4d4</color>
+    <color name="colorPrimary">#61AE7F7F</color>
     <color name="colorPrimaryDark">#835858</color>
     <color name="colorAccent">#794c74</color>
 </resources>
