--- a/app/src/main/res/layout/fragment2_layout.xml
+++ b/app/src/main/res/layout/fragment2_layout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="@drawable/home">
 
 
 
@@ -16,7 +17,9 @@
     <EditText
         android:id="@+id/edittext_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="29sp"
+        />
     <TextView
         android:id="@+id/textview_amount"
         android:layout_width="wrap_content"
@@ -26,6 +29,7 @@
         android:layout_margin="8dp"
         android:text="0"
         android:textSize="50sp" />
+
     <Button
         android:id="@+id/button_decrease"
         android:layout_width="50dp"
@@ -33,7 +37,10 @@
         android:layout_alignTop="@+id/textview_amount"
         android:layout_alignBottom="@+id/textview_amount"
         android:layout_toStartOf="@+id/textview_amount"
-        android:text="-" />
+        android:background="#61AE7F7F"
+        android:text="-"
+        android:textSize="18sp" />
+
     <Button
         android:id="@+id/button_increase"
         android:layout_width="50dp"
@@ -41,7 +48,10 @@
         android:layout_alignTop="@+id/textview_amount"
         android:layout_alignBottom="@+id/textview_amount"
         android:layout_toEndOf="@+id/textview_amount"
-        android:text="+" />
+        android:background="#61AE7F7F"
+        android:text="+"
+        android:textSize="18sp" />
+
     <Button
         android:id="@+id/button_add"
         android:layout_width="wrap_content"
@@ -50,7 +60,9 @@
         android:layout_alignBottom="@+id/button_increase"
         android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/button_increase"
-        android:text="add" />
+        android:background="#61AE7F7F"
+        android:text="add"
+        android:textSize="18sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
