--- a/app/src/main/res/layout/fragment2_layout.xml
+++ b/app/src/main/res/layout/fragment2_layout.xml
@@ -1,75 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="5dp"
     android:background="@drawable/home">
 
 
+    <LinearLayout
+        android:layout_width="484dp"
+        android:layout_height="119dp"
+        android:layout_x="76dp"
+        android:layout_y="211dp">
 
 
+        <Button
+            android:id="@+id/button_decrease"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textview_amount"
+            android:layout_alignBottom="@+id/textview_amount"
+            android:layout_toStartOf="@+id/textview_amount"
+            android:layout_toLeftOf="@+id/textview_amount"
+            android:background="#61AE7F7F"
+            android:text="-"
+            android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/textview_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edittext_name"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="8dp"
+            android:text="0"
+            android:textSize="50sp" />
 
+        <Button
+            android:id="@+id/button_increase"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textview_amount"
+            android:layout_alignBottom="@+id/textview_amount"
+            android:layout_toEndOf="@+id/textview_amount"
+            android:layout_toRightOf="@+id/textview_amount"
+            android:background="#61AE7F7F"
+            android:text="+"
+            android:textSize="18sp" />
 
+        <Button
+            android:id="@+id/button_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/button_increase"
+            android:layout_alignBottom="@+id/button_increase"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_toEndOf="@+id/button_increase"
+            android:layout_toRightOf="@+id/button_increase"
+            android:background="#61AE7F7F"
+            android:text="add"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
     <EditText
         android:id="@+id/edittext_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="29sp"
-        />
-    <TextView
-        android:id="@+id/textview_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edittext_name"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="8dp"
-        android:text="0"
-        android:textSize="50sp" />
-
-    <Button
-        android:id="@+id/button_decrease"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textview_amount"
-        android:layout_alignBottom="@+id/textview_amount"
-        android:layout_toStartOf="@+id/textview_amount"
-        android:background="#61AE7F7F"
-        android:text="-"
-        android:textSize="18sp" />
-
-    <Button
-        android:id="@+id/button_increase"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textview_amount"
-        android:layout_alignBottom="@+id/textview_amount"
-        android:layout_toEndOf="@+id/textview_amount"
-        android:background="#61AE7F7F"
-        android:text="+"
-        android:textSize="18sp" />
-
-    <Button
-        android:id="@+id/button_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button_increase"
-        android:layout_alignBottom="@+id/button_increase"
-        android:layout_marginStart="8dp"
-        android:layout_toEndOf="@+id/button_increase"
-        android:background="#61AE7F7F"
-        android:text="add"
-        android:textSize="18sp" />
+        android:layout_x="2dp"
+        android:layout_y="118dp"
+        android:textSize="29sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_width="406dp"
-        android:layout_height="541dp"
+        android:layout_width="407dp"
+        android:layout_height="414dp"
         android:layout_below="@+id/textview_amount"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="66dp"
+        android:layout_x="1dp"
+        android:layout_y="307dp" />
 
 
-</RelativeLayout>
+</AbsoluteLayout>
