--- a/app/src/main/res/layout/new_task.xml
+++ b/app/src/main/res/layout/new_task.xml
@@ -8,20 +8,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:hint="New Task"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:hint="New Task" />
 
     <Button
         android:id="@+id/newTaskButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/newTaskText"
+        android:textSize="16sp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:background="#61AE7F7F"
-        android:text="save"
+        android:background="@android:color/transparent"
+        android:text="Save"
         android:textAllCaps="false"
-        android:textColor="@android:color/primary_text_light"
-        android:textSize="16sp" />
+        android:textColor="@android:color/darker_gray" />
 
 </RelativeLayout>
