--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -17,9 +17,10 @@
             android:id="@+id/todoCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:buttonTint="#61AE7F7F"
-            android:paddingLeft="8dp"
-            tools:text="Go to the market and bring vegetables immediately today." />
+            android:layout_centerHorizontal="true"
+            android:paddingStart="8dp"
+            android:buttonTint="@color/colorPrimary"
+            tools:text="Go to the market and bring vegetables immediately today."/>
 
     </RelativeLayout>
 
